fix: hamburger menu overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,13 +4,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    /* overflow: hidden; */
 }
 
 body {
     font-family: Arial, sans-serif;
     /* background-color: #121212; */
     background: linear-gradient(135deg, #00202e, #121212);
+
     height: 100vh;
+    width: 100vw;
     
     overflow: hidden;
 }
