--- a/src/styles/main_navigation.css
+++ b/src/styles/main_navigation.css
@@ -105,30 +105,27 @@
     top: 56px;
     left: 0;
 
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    height: calc(100vh - 56px);
+
+    max-width: 0;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    /* background: linear-gradient(135deg, #00202e, #121212); */
-    background: rgba(11, 23, 28, 0.92);
-
-    backdrop-filter: blur(100px);
+    overflow: hidden;
 
     padding-top: 40px;
+    background: rgba(11, 23, 28, 0.95);
 
     color: white;
-    z-index: 1;
+    z-index: 998;
 
-    transform: translateX(100%);
-    transform-origin: 100%;
-    transition: all 0.2s ease-in;
+    transition: all 0.1s ease-in;
 }
 
 #toggler:checked ~ .main-nav-links-hamburger {
-    transform: translateX(0%);
+    max-width: 100vw;
 }
 
 .main-nav-links-hamburger li {
@@ -141,6 +138,8 @@
 
 #toggler:checked ~ .main-nav-links-hamburger li {
     opacity: 1;
+    transition: all 0s;
+    transition-delay: 0s;
 }
 
 @media screen and (max-width: 640px){
